--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
-    <app-root />
+    <app-root></app-root>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
   </body>
 </html>
